# server

./: .dockerignore  .env.connect  .env.example  .gitignore  .gitmodules  KNOWLEGE MINUTES EXCLUDED.md  Makefile  README.md  analyze_comments.py  analyze_ts_real.py  analyze_ts_repo.py  docker-compose.ai.yml  docker-compose.ci.yml  docker-compose.local-ai.yml  docker-compose.server.yml  docker-compose.worker.yml  docker-compose.yml  env.example  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  xlotyl
mbmh/: .gitignore  Makefile  README.md  mbmh-openclaw-models.json  pyproject.toml
mbmh/configs/: base.yaml
mbmh/configs/agents/: automation-agent.yaml  base-agent.yaml  openclaw-agent.yaml  retrieval-agent.yaml
mbmh/configs/auth/: api_keys.yaml
mbmh/configs/devices/: apple-mps.yaml  cpu.yaml  nvidia-cuda.yaml
mbmh/configs/models/: gemma.yaml  llama.yaml  mistral.yaml  qwen.yaml
mbmh/configs/peft/: full-finetune.yaml  lora-default.yaml  lora-small.yaml
mbmh/configs/runtime/: local-inference.yaml  openai-compatible.yaml  transformers-server.yaml  vllm.yaml
mbmh/configs/tasks/: continued_pretrain.yaml  eval.yaml  sft.yaml
mbmh/configs/tools/: email.yaml  filesystem.yaml  github.yaml  http.yaml  slack.yaml
mbmh/deploy/local/: docker-compose.yaml
mbmh/deploy/openclaw/: README.md  SKILLS-SETUP.md  openclaw-limited-agents-bitwarden.json5  openclaw-mbmh-provider.json5
mbmh/docs/: agent_contract.md  architecture.md  dataset_contract.md  deployment_runbooks.md  model_support_matrix.md  runbooks.md  runtime_architecture.md
mbmh/scripts/: bootstrap.sh  emit_openclaw_provider_config.py  evaluate.py  export_adapter.py  merge_adapter.py  package_runtime.py  run_agent.py  serve_local.py  sync_artifacts.py  train_clm.py  train_sft.py  verify_env.py
mbmh/src/: __init__.py
mbmh/src/agents/: automation_agent.py  base.py  executor.py  memory.py  openclaw_agent.py  planner.py  prompts.py  retrieval_agent.py  task_router.py
mbmh/src/runtime/: artifact_resolver.py  auth.py  chat_content.py  config.py  generation.py  model_loader.py  openai_compat.py  routing.py  safety.py  server.py  session_store.py  telemetry.py
mbmh/src/tools/: base.py  email.py  filesystem.py  github.py  http.py  registry.py  slack.py
mbmh/src/training/: checkpointing.py  collators.py  config.py  data.py  device.py  logging.py  metrics.py  model.py  peft.py  registry.py  seed.py  tokenizer.py  trainer_factory.py
mbmh/tests/: __init__.py  conftest.py  test_agent_executor_streaming.py  test_agent_registry.py  test_chat_content.py  test_config.py  test_data_format.py  test_device_selection.py  test_model_registry.py  test_openai_compat.py  test_openclaw_adapter.py  test_openclaw_openai_integration.py  test_runtime_loader.py  test_smoke_train.py  test_tokenizer_loading.py  test_tool_registry.py
mbmh/tests/fixtures/: __init__.py  openai_client_contract.py
mcp/servers/filesystem-mcp/: README.md  pyproject.toml
services/ai-shared-service/: .gitignore  Dockerfile  README.md  pyproject.toml
services/api-service/: Dockerfile  README.md  pyproject.toml  test_paths.py
services/api-service/docs/: orchestration_routing_matrix.md
services/api-service/src/: app.py  config.py  orchestrator_client.py  workflows.py
services/api-service/tests/: conftest.py  run_rag_eval.py  test_ai_endpoints.py  test_ai_endpoints_negative.py  test_api_coverage_remaining.py  test_app.py  test_apps_list.py  test_automation_routes.py  test_control_plane_contracts.py  test_devplane.py  test_domain_packages_import.py  test_knowledge_pool.py  test_network_ui.py  test_observability.py  test_openclaw_bridge.py  test_openclaw_query_stream_route.py  test_openclaw_stream_adapter.py  test_openclaw_stream_event_fixtures.py  test_orchestration_contract_and_workspace_coverage.py  test_pipe_more_coverage_modules.py  test_pipe_omitted_modules.py  test_rag_workflow_eval.py  test_referential_state_shape.py  test_settings_agent_platform_url.py  test_wiki_editorial_governance.py  test_workflow_cancel_ack.py
services/domain-content/: README.md  pyproject.toml
services/domain-content/tests/: test_domain_content.py
services/domain-engineering/: README.md  pyproject.toml
services/domain-engineering/tests/: test_governance.py
services/domain-research/: README.md  pyproject.toml
services/domain-research/tests/: test_domain_research.py
services/engineering-core/: README.md  pyproject.toml
services/engineering-core/tests/: test_reference_mechanics.py
services/larrak-audio/: .gitignore  README.md  pyproject.toml
services/mcp-registry-service/: .dockerignore  pyproject.toml
services/mcp-registry-service/src/: schemas.py
services/media-service/: .gitignore  README.md  pyproject.toml
services/model-runtime/: Dockerfile  README.md  pyproject.toml
services/model-runtime/config/: models.yaml
services/model-runtime/tests/: test_app.py  test_hf_dispatch.py  test_smoke_placeholder.py
services/response-control-framework/: pyproject.toml
services/response-control-framework/tools/: wiki_compile.py
services/router/: pyproject.toml
services/router/src/: config.py  context_compaction.py  mcp_client.py  orchestrator_client.py  router.py  workflow_engine.py
services/router/tests/: conftest.py  test_coverage_boost.py  test_mcp_client_unit.py  test_more_coverage.py  test_router.py  test_router_mcp_proxy.py  test_router_networking.py  test_smoke.py
services/structure/: pyproject.toml
services/structure/docs/: SCHEMAS.md
services/structure/eval/: harness.py  report.py
services/structure/gateway/: logging.py  main.py
services/structure/kernels/: constants.py  project.py  statistics.py
services/structure/models/: __init__.py  session.py  task_spec.py  workflow.py
services/structure/pipelines/: ingestion.py
services/structure/router/: llm_extractor.py
services/structure/runtime/: orchestrator.py
services/structure/schemas/: task_dossier.schema.json  (+1 more)
services/wrkhrs/: .gitignore  4.30.0  README.md  env.example  optimize_model.py  pyproject.toml  pytest.ini  train_coding_model.py
(+1416 files in other folders)
