[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server-workspace"
version = "0.1.0"
description = "Infrastructure platform: networking, deployment, observability; AI product is the xlotyl submodule"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "filesystem-mcp-server[dev]",
    "secrets-mcp-server[dev]",
    "vector-db-mcp-server[dev]",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false
default-groups = []

# Host-side MCP servers remain in this repo; AI Python stack is under `xlotyl/`.
[tool.uv.sources]
filesystem-mcp-server = { workspace = true }
secrets-mcp-server = { workspace = true }
vector-db-mcp-server = { workspace = true }

[tool.uv.workspace]
members = [
    "mcp-servers/mcp/servers/filesystem-mcp",
    "mcp-servers/mcp/servers/secrets-mcp",
    "mcp-servers/mcp/servers/vector-db-mcp",
]
