[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Workspace members are host-side MCP servers only. Domain / RCF / ai-shared libraries live in
# standalone repos and xlotyl — see docs/repository-content-model.md and docs/xlotyl-and-standalone-packages.md.
[project]
name = "server-workspace"
version = "0.1.0"
description = "Infrastructure platform: networking, deployment, observability; AI stack is consumed as OCI images (pins in config/xlotyl-images.env)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "filesystem-mcp-server[dev]",
    "secrets-mcp-server[dev]",
    "vector-db-mcp-server[dev]",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false
default-groups = []

# Host-side MCP servers remain in this repo; AI implementation lives in https://github.com/XLOTYL/xlotyl
[tool.uv.sources]
filesystem-mcp-server = { workspace = true }
secrets-mcp-server = { workspace = true }
vector-db-mcp-server = { workspace = true }

[tool.uv.workspace]
members = [
    "mcp-servers/mcp/servers/filesystem-mcp",
    "mcp-servers/mcp/servers/secrets-mcp",
    "mcp-servers/mcp/servers/vector-db-mcp",
]
