[project]
name = "ai-stack"
version = "0.1.0"
description = "LangChain/Haystack service scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.6",
  "structlog>=24.1",
  "langchain>=0.2",
  "langchain-community>=0.2",
  "haystack-ai>=2.0",
  "openai>=1.44",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

