[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-shared-service"
version = "0.1.0"
description = "Shared AI gateway services for domain orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_shared_service"]

[tool.uv]
managed = true
