[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "agent-orchestrator-api"
version = "0.1.0"
description = "FastAPI control plane for agent orchestration"
authors = [
    {name = "Agent Orchestrator Team", email = "team@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "docker>=6.1.0",
    "mlflow",
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-exporter-otlp>=1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "respx>=0.20.0",
    "pyyaml>=6.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "httpx>=0.25.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-o",
    "cache_dir=../../.cache/pytest/services-api",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/main.py",
    "src/policies/hedging_executable.py",
    "src/policies/units_executable.py",
]

[tool.mypy]
python_version = "3.11"
cache_dir = "../../.cache/mypy/services-api"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# Remaining strict cleanup is ongoing; silence mypy in these modules so CI stays useful.
[[tool.mypy.overrides]]
module = [
    "src.observability.tracing",
    "src.observability.trace",
    "src.observability.provenance",
    "src.observability.mlflow_logger",
    "src.wrkhrs.gateway_client",
    "src.wrkhrs.conditioning",
    "src.wrkhrs.domain_classifier",
    "src.policies.registry",
    "src.policies.units",
    "src.policies.citations",
    "src.policies.evidence",
    "src.policies.hedging",
    "src.policies.units_executable",
    "src.policies.hedging_executable",
    "src.policies.middleware",
    "src.routes.ai",
    "src.routes.feedback",
    "src.routes.middleware",
    "src.clients.docker",
    "src.clients.search",
    "src.clients.proxmox",
    "src.config",
]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 88
cache-dir = "../../.cache/ruff"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
