[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-content"
version = "0.1.0"
description = "Content domain: video editing, captions, timeline interchange, and Whisper alignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "response-control-framework",
    "ai-shared-service",
    "pydantic>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/domain_content"]

[tool.uv]
managed = true

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
