[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-engineering"
version = "0.1.0"
description = "Engineering domain logic and knowledge packs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "response-control-framework",
    "ai-shared-service",
    "pydantic>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/domain_engineering"]

[tool.uv]
managed = true
