[project]
name = "engineering-core"
version = "0.1.0"
description = "Deterministic reference mechanics and verification for v1 engineering harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
engineering_core = ["fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
