 [project]
 name = "martymedia"
 version = "0.1.0"
 description = "Deterministic media automation tools (Whisper captions)"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "domain-content",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=8.0", "ruff>=0.1"]
 
 [project.scripts]
 martymedia-whisper = "martymedia.cli:main"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
