[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "response-control-framework"
version = "0.1.0"
description = "Domain-agnostic governance and execution framework"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/response_control_framework"]
