[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrkhrs"
version = "0.1.0"
description = "WrkHrs services (gateway + legacy scripts) for the server monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "httpx>=0.25.0",
  "numpy>=1.24.0",
  "PyJWT>=2.8.0",
  "langchain-core>=0.2.0",
  "langgraph>=0.2.0",
  "openai>=1.3.0",
  "torch>=2.0.0",
  "transformers>=4.0.0",
  "sentence-transformers>=2.0.0",
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "networkx>=3.0.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  "qdrant-client>=1.6.0",
  "rank_bm25>=0.2.0",
  "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.2.0",
  "black>=24.0.0",
]

[tool.setuptools.packages.find]
include = ["wrkhrs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--ignore=scripts",
  "--cov=services/gateway",
  "--cov=services/prompt_middleware",
  "--cov=services/rag",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=90",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "scripts/*",
    "_archive/*",
]

