[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birtha-tool-model-lane"
version = "0.1.0"
description = "Reference POST /api/ai/tool-query handler and contracts for the OpenClaw tool-model lane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "jsonschema>=4.21",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["birtha_tool_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
