[tool.poetry]
name = "doc-resources-mcp"
version = "0.1.0"
description = "MCP server for PDF/textbook datasets with chunking and content hashing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.5.2"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.2"
pymupdf = "^1.23.8"
pdfplumber = "^0.10.3"
python-docx = "^0.8.11"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
tiktoken = "^0.5.2"
numpy = "^1.24.3"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"











