[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "secrets-mcp-server"
version = "0.1.0"
description = "Secure secrets management MCP server"
authors = [
    {name = "Agent Orchestrator Team", email = "team@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "hvac>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-o",
    "cache_dir=../../../.cache/pytest/mcp-secrets",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    # Current tests only exercise Connect client + op refs; exclude other entrypoints from the gate until covered.
    "--cov-fail-under=50",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/bitwarden_sm_client.py",
    "src/bws_ref.py",
    "src/secrets_server.py",
    "src/vault_client.py",
]

[tool.mypy]
python_version = "3.11"
cache_dir = "../../../.cache/mypy/mcp-secrets"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "hvac.*",
    "cryptography.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88
cache-dir = "../../../.cache/ruff"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
